# hamdrill

./: hamdrill.cabal  mandrill.cabal
src/Data/API/Tools/: Mandrill.hs
src/Network/API/Mandrill/: Exports.hs  Inbound.hs  Ips.hs  Messages.hs  Metadata.hs  Monad.hs  Rejects.hs  Response.hs  Senders.hs  Subaccounts.hs  Tags.hs  Templates.hs  Types.hs  Urls.hs  Users.hs  Utils.hs  Webhooks.hs  Whitelists.hs
src/Network/API/Mandrill/TH/: Types.hs  Utils.hs
src/Network/Mandrill/: Types.hs  Utils.hs
src/Network/Mandrill/TH/: Types.hs
test/Network/API/Mandrill/: ExportsSpec.hs  InboundSpec.hs  IpsSpec.hs  MessagesSpec.hs  MetadataSpec.hs  RejectsSpec.hs  SendersSpec.hs  SubaccountsSpec.hs  TagsSpec.hs  TemplatesSpec.hs  UrlsSpec.hs  UsersSpec.hs  WebhooksSpec.hs  WhitelistsSpec.hs
test/Network/Mandrill/: MessagesSpec.hs
