name:                hamdrill
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.0.3
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Karsten Gebbert
maintainer:          k@ioctl.it
category:            Network.API
build-type:          Simple
extra-source-files:  README.md
cabal-version:         >=1.10

library
  -- ghc-options:         -ddump-splices -- dump splices to file: cabal build 2> splics
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Network.API.Mandrill.Types
                     , Network.API.Mandrill.Response
                     , Network.API.Mandrill.Exports
                     , Network.API.Mandrill.Inbound
                     , Network.API.Mandrill.Ips
                     , Network.API.Mandrill.Messages
                     , Network.API.Mandrill.Metadata
                     , Network.API.Mandrill.Rejects
                     , Network.API.Mandrill.Senders
                     , Network.API.Mandrill.Subaccounts
                     , Network.API.Mandrill.Tags
                     , Network.API.Mandrill.Templates
                     , Network.API.Mandrill.Urls
                     , Network.API.Mandrill.Users
                     , Network.API.Mandrill.Webhooks
                     , Network.API.Mandrill.Whitelists
                     , Network.API.Mandrill.Monad
  
  -- Modules included in this library but not exported.
  other-modules:       Network.API.Mandrill.TH.Utils
                     , Network.API.Mandrill.TH.Types
                     , Network.API.Mandrill.Utils
                     , Data.API.Tools.Mandrill

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    TemplateHaskell
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , QuasiQuotes

  build-depends:       base >=4.7 && <4.8
                     , api-tools
                     , template-haskell
                     , aeson
                     , http-conduit
                     , bytestring
                     , transformers
                     , containers
                     , data-default
                     , old-locale
                     , text
                     , time
                     , lens
                     , mtl

test-suite spec
  type:                exitcode-stdio-1.0

  ghc-options:         -Wall -Werror 
  
  hs-source-dirs:      src
                     , test
  
  main-is:             Spec.hs

  other-modules:       Network.API.Mandrill.Types
                     , Network.API.Mandrill.Response
                     , Network.API.Mandrill.Utils
                     , Data.API.Tools.Mandrill
                     , Network.API.Mandrill.Exports
                     , Network.API.Mandrill.Inbound
                     , Network.API.Mandrill.Ips
                     , Network.API.Mandrill.Messages
                     , Network.API.Mandrill.Metadata
                     , Network.API.Mandrill.Rejects
                     , Network.API.Mandrill.Senders
                     , Network.API.Mandrill.Subaccounts
                     , Network.API.Mandrill.Tags
                     , Network.API.Mandrill.Templates
                     , Network.API.Mandrill.Urls
                     , Network.API.Mandrill.Users
                     , Network.API.Mandrill.Webhooks
                     , Network.API.Mandrill.Whitelists
                     , Network.API.Mandrill.Monad
  
  build-depends:       base >=4.7 && <4.8 
                     , hspec
                     , hspec-expectations
                     , QuickCheck
                     , api-tools
                     , template-haskell
                     , aeson
                     , http-conduit
                     , bytestring
                     , transformers
                     , data-default
                     , containers
                     , text
                     , time
                     , old-locale
                     , lens
                     , mtl

  default-language:    Haskell2010
